--- a/index.html
+++ b/index.html
@@ -1,106 +1,53 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca Digital Fil i Foc</title>
-    <style> /* Estil bàsic per a la biblioteca */
-        body { font-family: sans-serif; margin: 20px; line-height: 1.6; background-color: #f8f8f8; color: #333;}
-        .container { max-width: 800px; margin: 0 auto; background-color: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        h1, h2 { color: #0056b3; }
-        h1 { text-align: center; margin-bottom: 20px; }
-        h2 { margin-top: 30px; margin-bottom: 10px; border-bottom: 1px solid #eee; padding-bottom: 5px; }
-        ul { list-style: disc; padding-left: 20px; }
-        ul ul { list-style: circle; margin-top: 5px; margin-bottom: 5px; } /* Per a llistes niuades */
-        li { margin-bottom: 8px; }
-        a { text-decoration: none; color: #0066cc; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Biblioteca Digital Fil i Foc</title>
+  <style>
+    body { font-family: sans-serif; background: #f9f9f9; padding: 2em; }
+    h1, h2 { color: #003366; }
+    ul { line-height: 1.6em; }
+    a { color: #0055aa; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
+  <h1>Biblioteca Digital Fil i Foc</h1>
+  <p>Aquí trobareu documents, presentacions i recursos complementaris al web filifoc.cat, organitzats per temes i generacions.</p>
 
-    <div class="container">
-        <h1>Biblioteca Digital Fil i Foc</h1>
-        <p>Aquí trobareu documents, presentacions i recursos complementaris al web filifoc.cat, organitzats per temes i generacions.</p>
+  <h2>Pàgines destacades</h2>
+  <ul>
+    <li><a href="context-agusti-maria.html">Context: Desplaçament d’Agustí Armengol i Maria Clapés</a></li>
+    <li><a href="index.html">Inici de la biblioteca</a></li>
+    <li><a href="agnes-armengol-quiz.html">Qüestionari interactiu: Agnès Armengol</a></li>
+  </ul>
 
-        <h2>Generacions Tèxtils Armengol</h2>
+  <h2>Carpetes Temàtiques de la Biblioteca</h2>
+  <ul>
+    <li><a href="biografies/">Biografies</a></li>
+    <li><a href="vestimenta/">Vestimenta</a></li>
+    <li><a href="societat/">Societat</a></li>
+    <li><a href="objectes/">Objectes</a></li>
+    <li><a href="documents-visuals/">Documents Visuals</a></li>
+    <li><a href="mapes/">Mapes</a></li>
+    <li><a href="cronologies/">Cronologies</a></li>
+    <li><a href="premsa/">Premsa</a></li>
+    <li><a href="testimonis-orals/">Testimonis Orals</a></li>
+    <li><a href="patents-i-maquinaria/">Patents i Maquinària</a></li>
+    <li><a href="legislacio/">Legislació</a></li>
+    <li><a href="inspiracions-visuals/">Inspiracions Visuals</a></li>
+    <li><a href="materies-textils/">Matèries Tèxtils</a></li>
+    <li><a href="estris-teixir-filar/">Estris de Teixir o de Filar</a></li>
+    <li><a href="importacions-i-exportacions/">Importacions i Exportacions</a></li>
+    <li><a href="premis/">Premis</a></li>
+    <li><a href="canvi-divises-i-facturacio/">Canvi de Divises i Facturació</a></li>
+    <li><a href="preus-cost-de-la-vida/">Preus i Cost de la Vida</a></li>
+    <li><a href="institucions-i-gremis/">Institucions i Gremis</a></li>
+    <li><a href="fonts-arxivistiques/">Fonts Arxivístiques</a></li>
+  </ul>
 
-        <h3>Coordenades: geografia i arbre</h3>
-        <ul>
-             <!-- ENLLAÇ EXEMPLE - MODIFICA QUAN PUGIS EL PDF -->
-            <li><a href="coordenades/[NOM_DEL_FITXER_COORDENADES].pdf" target="_blank">[NOM_DEL_FITXER_COORDENADES].pdf</a></li>
-        </ul>
-
-        <h3>Origen: Agustí Armengol i Maria Clapés & fills</h3>
-        <ul>
-             <!-- ENLLAÇ EXEMPLE - MODIFICA QUAN PUGIS EL PDF -->
-            <li><a href="generacions/origen/[NOM_DEL_FITXER_ORIGEN].pdf" target="_blank">[NOM_DEL_FITXER_ORIGEN].pdf</a></li>
-        </ul>
-
-        <h3>Armengol i Clapés: primera generació tèxtil</h3>
-        <ul>
-             <!-- ENLLAÇ EXEMPLE - MODIFICA QUAN PUGIS EL PDF -->
-            <li><a href="generacions/primera/[NOM_DEL_FITXER_AC].pdf" target="_blank">General (Armengol i Clapés)</a></li>
-            <li><a href="generacions/primera/dos-germans/[NOM_DEL_FITXER_DG].pdf" target="_blank">Dos germans, dues matèries</a></li>
-        </ul>
-
-        <h3>Armengol i Bordas: segona generació tèxtil</h3>
-        <ul>
-            <li><a href="generacions/segona/francisco-armengol-bordas/[NOM_DEL_FITXER_FAB].pdf" target="_blank">Francisco Armengol i Bordas - biografia</a></li>
-            <li>
-                Jaume Armengol i Bordas
-                <ul>
-                    <li><a href="generacions/segona/jaume-armengol-bordas/gertrudis-candil/[NOM_DEL_FITXER_GC].pdf" target="_blank">Gertrudis Candil Guerrero</a></li>
-                </ul>
-            </li>
-            <li><a href="generacions/segona/germanes/[NOM_DEL_FITXER_GerAB].pdf" target="_blank">Germanes Armengol i Bordas</a></li>
-        </ul>
-
-         <h3>Armengol i Altayó, Armengol i Candil: tercera generació tèxtil</h3>
-        <ul>
-            <li><a href="generacions/tercera/agnes-armengol-altayo/[NOM_DEL_FITXER_AAA].pdf" target="_blank">Agnès Armengol i Altayó (PDF Resum)</a></li>
-             <li><a href="generacions/tercera/francisco-armengol-altayo/[NOM_DEL_FITXER_FAA].pdf" target="_blank">Francisco Armengol i Altayó</a></li>
-            <li><a href="generacions/tercera/francisco-armengol-candil/[NOM_DEL_FITXER_FAC].pdf" target="_blank">Francisco Armengol Candil</a></li>
-        </ul>
-
-         <h3>Armengol i Burguès: quarta generació tèxtil</h3>
-         <ul>
-            <li><a href="generacions/quarta/teodor/[NOM_DEL_FITXER_TEO].pdf" target="_blank">Teodor Armengol i Burguès</a></li>
-            <li><a href="generacions/quarta/adela/[NOM_DEL_FITXER_ADE].pdf" target="_blank">Adela Armengol i Burguès</a></li>
-            <li><a href="generacions/quarta/marian/[NOM_DEL_FITXER_MAR].pdf" target="_blank">Marian Armengol i Burguès</a></li>
-            <li><a href="generacions/quarta/rafel/[NOM_DEL_FITXER_RAF].pdf" target="_blank">Rafel Armengol i Burguès</a></li>
-        </ul>
-
-        <h3>Armengol i Esteve: cinquena generació tèxtil</h3>
-         <ul>
-             <li><a href="generacions/cinquena/eduard/[NOM_DEL_FITXER_EE].pdf" target="_blank">Eduard Armengol Esteve</a></li>
-        </ul>
-
-        <h3>Armengol i fills: sisena generació tèxtil</h3>
-         <ul>
-            <li><a href="generacions/sisena/eduard-joan/[NOM_DEL_FITXER_EJ].pdf" target="_blank">Eduard i Joan Bosco Armengol i Uñó</a></li>
-            <li><a href="generacions/sisena/botiga/[NOM_DEL_FITXER_BOT].pdf" target="_blank">Botiga gènero de punt</a></li>
-            <li><a href="generacions/sisena/city-guilds/[NOM_DEL_FITXER_CG].pdf" target="_blank">City & Guilds Patronatge</a></li>
-        </ul>
-
-        <h2>Temes Específics</h2>
-         <ul>
-            <li><a href="llana/[NOM_DEL_FITXER_LLANA_G].pdf" target="_blank">Llana (General)</a></li>
-            <li><a href="llana/ovelles/[NOM_DEL_FITXER_OVE].pdf" target="_blank">Les ovelles i la llana</a></li>
-            <li><a href="coto/[NOM_DEL_FITXER_COTO].pdf" target="_blank">Cotó</a></li>
-            <li><a href="comparativa/[NOM_DEL_FITXER_COMP].pdf" target="_blank">Comparativa llana i cotó</a></li>
-            <li><a href="diccionari/[NOM_DEL_FITXER_DIC].pdf" target="_blank">Diccionari Fil i Foc</a></li>
-             <!-- Afegeix aquí enllaços a documents que potser no encaixen directament a les seccions anteriors -->
-        </ul>
-         <h3>Pàgina sense títol</h3>
-          <ul>
-            <li><a href="sense-titol/[NOM_DEL_FITXER_ST].pdf" target="_blank">Document sense títol</a></li>
-         </ul>
-
-
-        <p>Aquesta biblioteca s'actualitzarà regularment amb nous documents i recursos.</p>
-
-    </div>
-
+  <p style="font-style: italic;">Aquesta biblioteca s’actualitzarà regularment amb nous documents i recursos.</p>
 </body>
 </html>
+"""
+
