--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="context-agusti-maria.html">Context: Desplaçament d’Agustí Armengol i Maria Clapés</a></li>
     <li><a href="agnes-armengol-quiz.html">Qüestionari interactiu: Agnès Armengol</a></li>
   </ul>
+<li><a href="generacions.html">Generacions Tèxtils Armengol</a></li>
 
   <h2>Carpetes Temàtiques de la Biblioteca</h2>
   <ul>
